--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Web site created" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="./manifest.webmanifest" />
+    <link rel="stylesheet" href="reset.css">
     <title>React App</title>
   </head>
 
