added main content, Board and NewBoard components

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="Web site created" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="stylesheet" href="reset.css">
-    <title>React App</title>
+    <link rel="stylesheet" href="../src/styles/reset.css">
+    <link rel="stylesheet" href="../src/styles/styles.css">
+    <title>my-mini-trello-clone</title>
   </head>
 
   <body>
