new styles for inputs, new fonts

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Web site created" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="stylesheet" href="../src/styles/reset.css">
-    <link rel="stylesheet" href="../src/styles/styles.css">
+    <link rel="stylesheet" href="../src/stylesReset/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <title>my-mini-trello-clone</title>
   </head>
 
